--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,40 @@
-##################################################
-# Run Njoku chris Super Linter against code base #
-##################################################
+###############################################
+
+# Run GitHub's Super Linter against code base #
+
+###############################################
 
 ---
-name:Njoku chris Super Linter
-on:
-  push:
-  pull_request:
+
+name: GitHub's Super Linter
+
+on: push
 
 jobs:
- run-linters:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out Git repository 🚦
-        uses: actions/checkout@v2
 
-      - name: Run GitHub Super Linter 🚀
-        uses: github/super-linter@main
-        env:
-          VALIDATE_ALL_CODEBASE: true
-          LINTER_RULES_PATH:'/'
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+ run-linters:
+
+   name: GitHub's Super Linter
+
+   runs-on: ubuntu-latest
+
+   steps:
+
+     - name: Check out Git repository
+
+       uses: actions/checkout@master
+
+     - name: Run GitHub Super Linter
+
+       uses: github/super-linter@main
+
+       env:
+
+         VALIDATE_ALL_CODEBASE: true
+
+         VALIDATE_JAVASCRIPT_STANDARD: false
+
+         VALIDATE_JSCPD: false
+
+         DEFAULT_BRANCH: main
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
